# bytecodec

./: .travis.yml  Cargo.toml  README.md
src/: bincode_codec.rs  buf.rs  byte_count.rs  bytes.rs  bytes_codec.rs  chain.rs  combinator.rs  combinators.rs  decode.rs  encode.rs  eos.rs  error.rs  fixnum.rs  fixnum_codec.rs  io.rs  io_async.rs  items.rs  json_codec.rs  lib.rs  macros.rs  maker.rs  marker.rs  monolithic.rs  null.rs  numbers.rs  padding.rs  sequences.rs  slice.rs  traits.rs  tuple.rs  value.rs
