[package]
name = "bytecodec"
version = "0.2.6"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A tiny framework for implementing encoders/decoders of byte-oriented protocols"
homepage = "https://github.com/sile/bytecodec"
repository = "https://github.com/sile/bytecodec"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = {repository = "sile/bytecodec"}
codecov = {repository = "sile/bytecodec"}

[dependencies]
bincode = { version = "1", optional = true }
byteorder = "1"
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
trackable = "0.2"

[features]
bincode_codec = ["serde", "bincode"]
json_codec = ["serde", "serde_json"]

[package.metadata.docs.rs]
all-features = true
