[package]
name = "bytecodec"
version = "0.4.13"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A tiny framework for implementing encoders/decoders of byte-oriented protocols"
homepage = "https://github.com/sile/bytecodec"
repository = "https://github.com/sile/bytecodec"
readme = "README.md"
license = "MIT"
categories = ["encoding"]
edition = "2018"

[badges]
coveralls = {repository = "sile/mlmd"}

[dependencies]
bincode = { version = "1", optional = true }
byteorder = "1"
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
trackable = "0.2"
tokio = { version = "1.0", features = ["io-util"], optional = true }
pin-project = { version = "1", optional = true }

[features]
bincode_codec = ["serde", "bincode"]
json_codec = ["serde", "serde_json"]
tokio-async = ["tokio", "pin-project"]

[package.metadata.docs.rs]
all-features = true
